# backend

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.uat  Jenkinsfile  Jenkinsfile.uat  PR-SUMMARY-DIS-177.md  README.md  docker-compose.uat.yml  docker-compose.yml  eslint.config.cjs  eslint.config.mjs  eslint.test.config.mjs  jenkins-agent-backend-uat.yaml  jenkins-agent-uat.yaml  jest-e2e.json  jest.config.json  package-lock.json  package.json  pnpm-lock.yaml  test_ai_endpoint.py  tsconfig.build.json  tsconfig.json
ai/: AI_SERVICE_REFACTORING_PLAN.md  DDD_ARCHITECTURE.md  Dockerfile.uat  Jenkinsfile  Makefile  REALTIME_REDIS_UPDATE.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  jenkins-agent-uat-ai.yaml  pyproject.toml  test_8step_workflow.py  test_core_structure.py  test_integration.py  test_intent_update.py  test_llm_corrector.py  test_restructured_module.py  test_speech_correction.py
ai/app/: callskeleton_mapper.py  chatr2v3.py  chatr2v3_original.py  code_dependency_analysis_prompt.md  config.py  dependencies.py  dialog_manager.py  main.py  models.py  redis_client.py  test_conversation.py  test_llm_integration.py
ai/app/api/: booking.py  call.py  chat.py  conversation.py  dispatch.py  email.py  health.py  intent.py  router.py  summary.py
ai/app/chains/: email_then_calendar.py
ai/app/client/: mcp_client.py
ai/app/core/: __init__.py  config.py
ai/app/custom_types/: __init__.py  customer_service_types.py
ai/app/domain/: __init__.py  callskeleton_mapper.py  entities.py  services.py  value_objects.py
ai/app/infrastructure/: __init__.py  llm_adapter.py  llm_factory.py  redis_client.py
ai/app/intent_classification/: README.md  __init__.py
ai/app/models/: booking.py  call.py  intent.py  request_models.py  response_models.py
ai/tests/: test_prompt.py
(+414 files in other folders)
