[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=4.0.1",
    "boto3>=1.39.3",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "langchain-openai>=0.3.18",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
]
