[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "AI Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=4.0.1",
    "boto3>=1.39.3",
    "fastapi-mcp==0.3.6",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "langchain-openai>=0.3.18",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]
